# api/v1/openapi.yaml
@@ -46,6 +46,28 @@ paths:
         default:
           $ref: "#/components/responses/Error"
 
+  /suggest-projects:
+    post:
+      summary: "Search in projects"
+      description: "Search in projects"
+      operationId: "suggestProjects"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/SuggestProjectsRequest"
+        required: true
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/SuggestProjectsResponse"
+        default:
+          $ref: "#/components/responses/Error"  
+
+
 security:
   - apiKey: []
 
@@ -129,66 +151,88 @@ components:
       required: [id]
 
     GetProjectResponse:
+      $ref: "#/components/schemas/Project"
+
+    SuggestProjectsRequest:
       type: object
-      allOf:
-        - type: object
+      properties:
+        query:
+          type: string
+          minLength: 1
+      required: [query]
+
+    SuggestProjectsResponse:
+      type: object
+      properties:
+        cursor:
+          type: string
+        data:
+          type: array
+          items:
+            $ref: "#/components/schemas/Project"
+
+      required: [data]
+
+    Project:
+      type: object
+      properties:
+        id:
+          type: string
+        type:
+          type: string
+        identifier:
+          type: array
+          items:
+            type: object
+            properties:
+              type:
+                type: string
+              propertyID:
+                type: string
+              value:
+                type: string
+            required: [type, propertyID, value]
+        isFundedBy:
+          type: object
+          nullable: true
           properties:
-            id:
-              type: string
             type:
               type: string
             identifier:
-              type: array
-              items:
-                type: object
-                properties:
-                  type:
-                    type: string
-                  propertyID:
-                    type: string
-                  value:
-                    type: string
-                required: [type, propertyID, value]
-            isFundedBy:
+              type: string
+            isAwardedBy:
               type: object
               nullable: true
               properties:
                 type:
                   type: string
-                identifier:
+                name:
                   type: string
-                isAwardedBy:
-                  type: object
-                  nullable: true
-                  properties:
-                    type:
-                      type: string
-                    name:
-                      type: string
-                  required: [type, name]
-              required: [type, identifier, isAwardedBy]
-            hasAcronym:
-              type: string
-              nullable: true
-            name:
-              type: string
-              nullable: true
-            description:
-              type: string
-              nullable: true
-            foundingDate:
-              type: string
-              nullable: true
-            dissolutionDate:
-              type: string
-              nullable: true
-            created:
-              type: string
-              format: date-time
-            modified:
-              type: string
-              format: date-time
-          required: [type, identifier, name, hasAcronym, isFundedBy, description, foundingDate, dissolutionDate, created, modified]
+              required: [type, name]
+          required: [type, identifier, isAwardedBy]
+        hasAcronym:
+          type: string
+          nullable: true
+        name:
+          type: string
+          nullable: true
+        description:
+          type: string
+          nullable: true
+        foundingDate:
+          type: string
+          nullable: true
+        dissolutionDate:
+          type: string
+          nullable: true
+        created:
+          type: string
+          format: date-time
+        modified:
+          type: string
+          format: date-time
+      required: [type, identifier, name, hasAcronym, isFundedBy, description, foundingDate, dissolutionDate, created, modified]
+
 
     Error:
       type: object
